@@ -105,7 +105,7 @@ public abstract class ResourceUtils {
             return true;
         }
         try {
-            new URL(resourceLocation);
+            URI.create(resourceLocation).toURL();
             return true;
         } catch (MalformedURLException ex) {
             return false;
@@ -136,7 +136,7 @@ public abstract class ResourceUtils {
         }
         try {
             // try URL
-            return new URL(resourceLocation);
+            return URI.create(resourceLocation).toURL();
         } catch (MalformedURLException ex) {
             // no URL -> treat as file path
             try {
@@ -176,7 +176,7 @@ public abstract class ResourceUtils {
         }
         try {
             // try URL
-            return getFile(new URL(resourceLocation));
+            return getFile(URI.create(resourceLocation).toURL());
         } catch (MalformedURLException ex) {
             // no URL -> treat as file path
             return new File(resourceLocation);
@@ -298,14 +298,14 @@ public abstract class ResourceUtils {
         if (separatorIndex != -1) {
             String jarFile = urlFile.substring(0, separatorIndex);
             try {
-                return new URL(jarFile);
+                return URI.create(jarFile).toURL();
             } catch (MalformedURLException ex) {
                 // Probably no protocol in original jar URL, like "jar:C:/mypath/myjar.jar".
                 // This usually indicates that the jar file resides in the file system.
                 if (!jarFile.startsWith("/")) {
                     jarFile = "/" + jarFile;
                 }
-                return new URL(FILE_URL_PREFIX + jarFile);
+                return URI.create(FILE_URL_PREFIX + jarFile).toURL();
             }
         } else {
             return jarUrl;
